AWS/modules/security/sg/main.tf
/*
Bastion Host: 외부에서 SSH (Port 22)로 접근 가능.
내부 시스템(Application Layer,
Database Layer)과의 통신을 위해 필요한 포트 (3306, 8080)만 허용.
Web Layer:
외부에서 HTTPS (443)로 접근 가능.
내부 Application Layer와 HTTP/HTTPS 통신 허용.
Application Layer:
내부 Web Layer 및 Database Layer와 통신할 수 있도록 포트 열기.
Database Layer:
Application Layer에서만 접근 가능, 외부 접근 차단.
*/

# BASTION SG
resource "aws_security_group" "bastion_sg" {
  name        = "${var.vpc_name}-SG-BASTION"
  description = "Bastion Host's Security group"
  vpc_id      = aws_vpc.var.vpc_name.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EKS SG
resource "aws_security_group" "manage_eks" {
  name   = "EKS managed server's Security group"
  vpc_id = aws_vpc.var.vpc_name.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 10250
    to_port     = 10250
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EFS Managed Server SG
resource "aws_security_group" "manage_efs" {
  name   = "EFS-Managed-Server's Security group"
  vpc_id = aws_vpc.var.vpc_name.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#  EFS SG
resource "aws_security_group" "efs_sg" {
  name   = "EFS storage's Security group"
  vpc_id = aws_vpc.var.vpc_name.id

  ingress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# RDS SG
resource "aws_security_group" "rds_sg" {
  name   = "for rds"
  vpc_id = aws_vpc.var.vpc_name.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Redis SG
resource "aws_security_group" "redis_sg" {
  name   = "for redis"
  vpc_id = aws_vpc.var.vpc_name.id

  ingress {
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
